# continuum-trade-intelligence

./: .env.example  .gitignore  README.md  TCIP_Design_Document.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analytics/: indicators.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py
backend/app/engines/: continuation.py  correlation.py  regime.py  structure.py
backend/app/features/: __init__.py  regime_features.py
backend/app/models/: regime.py
backend/app/repositories/: market_data.py  regime_snapshots.py
backend/app/schemas/: market.py  mean_reversion.py  regime.py  strategy.py
backend/app/services/: analysis_service.py  mean_reversion_service.py  regime_service.py  strategy_service.py
backend/app/tests/: test_engines.py
docs/: ARCHITECTURE.md  INTRADAY_REGIME_ENGINE.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/disabled-pages/: page.tsx
frontend/app/faq/: page.tsx
frontend/charts/: continuation-chart.tsx
frontend/components/: alerts-panel.tsx  app-tabs.tsx  auto-refresh.tsx  data-mode-switch.tsx  disabled-pages-link.tsx  factor-matrix.tsx  local-time.tsx  mean-reversion-terminal.tsx  refresh-button.tsx  regime-intelligence-panel.tsx  replay-table.tsx  score-ring.tsx  strategy-dashboard.tsx  strategy-selector.tsx  symbol-card.tsx  timeframe-select.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/stores/: use-market-store.ts
scripts/: dev.sh  test.sh
(+4 files in other folders)
