[project]
name = "tcip-backend"
version = "0.1.0"
description = "Trend Continuation Intelligence Platform API"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4",
  "anyio>=4.4.0,<4.7.0",
  "fastapi>=0.115.0,<0.116.0",
  "httpx>=0.27.0",
  "numpy>=1.26.4,<2.0.0",
  "pandas>=2.2.2,<3.0.0",
  "pydantic-settings>=2.4.0,<2.5.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "psycopg[binary]>=3.2.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.5,<0.31.0",
  "websockets>=12.0,<13.0",
]

[project.optional-dependencies]
dev = [
  "iniconfig<2.1.0",
  "pytest>=8.3.2,<9.0.0",
  "ruff>=0.6.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
